--- a/_sass/_hacker.scss
+++ b/_sass/_hacker.scss
@@ -6,7 +6,7 @@
   --base-color: #00ff00;
   --border: dashed 1px rgba(0, 255, 0, 0.9);
   --selection-background: rgba(0, 255, 0, 0.99);
-  --selection-text: #0f0;
+  --selection-text: #000;
   --background-color: #000;
   --text-color: var(--base-color);
   --placeholder-color: var(--base-color);
