--- a/_sass/_hacker.scss
+++ b/_sass/_hacker.scss
@@ -12,7 +12,7 @@
   --placeholder-color: var(--base-color);
   --link-color: var(--base-color);
   --code-color-1: #aaaaaa;
-  --code-color-2: #ffffcc;
+  --code-color-2: #00ff00;
   --code-color-3: #F00000;
   --code-color-4: #F0A0A0;
   --code-color-5: #b38aff;
